[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interactive-buttons-v2"
version = "1.0.1"
description = "Keyboard-driven interactive button menus for Python terminal apps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "readchar>=4.0",
    "colorama>=0.4",
]
keywords = ["terminal", "cli", "interactive", "buttons", "menu", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]

[tool.hatch.build.targets.wheel]
packages = ["interactive_buttons"]

[project.urls]
Homepage = "https://interactive-buttons.mbinc.tech"
Documentation = "https://interactive-buttons.mbinc.tech"
